added-directorie-portfolio

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 wp-content/*
 !wp-content/themes
 !wp-content/themes/*
-!wp-content/themes/dw
-!wp-content/themes/dw/*
-!wp-content/themes/dw/**/*
+!wp-content/themes/portfolio
+!wp-content/themes/portfolio/*
+!wp-content/themes/portfolio/**/*
 !vite.config.js
 !package.json
